sarndipity sweets link update

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ user-scalable=no">
                 </a>
             </div>
             <div>
-                <a href="http://www.sarndipitysweets.com" target="_blank">
+                <a href="http://www.cakepoplady.net/" target="_blank">
                     <img src="images/port-sarndipity@2x.jpg" alt="Sar.n.dipity Sweets">
                 </a>
             </div>
@@ -116,7 +116,7 @@ user-scalable=no">
                 </a>
             </div>
             <div>
-                <a href="http://www.rebelfortress.com" target="_blank">
+                <a href="#" target="_blank">
                     <img src="images/port-rebel@2x.jpg" alt="">
                 </a>
             </div>
