--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ user-scalable=no">
                 </a>
             </div>
             <div>
-                <a href="#" target="_blank">
+                <a href="http://www.rebelfortress.com" target="_blank">
                     <img src="images/port-rebel@2x.jpg" alt="">
                 </a>
             </div>
