updated About section

--- a/index.html
+++ b/index.html
@@ -22,16 +22,6 @@ user-scalable=no">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="js/jquery.validate.js"></script>
-
-    <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-        ga('create', 'UA-64869147-1', 'auto');
-        ga('send', 'pageview');
-    </script>
 </head>
 
 <body>
@@ -137,9 +127,9 @@ user-scalable=no">
         <div id="aboutAnchor" class="about-anchor"></div>
         <div class="section about">
             <h2>About</h2>
-            <p>Hello, I'm Christian Halsell and I love to design and develop clean and professional websites. With eight years professional experience in web development and UX/UI design, I continue to find new ways to merge my love for interactive technology and art.</p>
+            <p>With twelve years professional experience in web and SPA development I continue to find new ways to merge my love for technology and art.</p>
 
-            <p>I hand-code all of my projects and keep up-to-date with the latest technologies, including HTML5, CSS3, JavaScript/jQuery, Responsive Web Design/Mobile Web, LESS/SASS, Scrum/Agile Development and SVN. I can convert any web design into a fully functional WordPress theme whether it's for a blog, a CMS website, or both! I also have extensive knowledge of Photoshop, Illustrator, Premiere and After Effects.</p>
+            <p>Specialties: ES6/Javascript, React, Redux, Babel, Webpack, Node, SASS/CSS3, HTML5, Scrum/Agile, GIT, WordPress, PHP, mySQL, Photoshop, Illustrator, Premiere and After Effects. </p>
         </div>
     </div>
 
