added Sketch to list

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ user-scalable=no">
             <h2>About</h2>
             <p>With twelve years professional experience in web and SPA development I continue to find new ways to merge my love for technology and art.</p>
 
-            <p>Specialties: ES6/Javascript, React, Redux, Babel, Webpack, Node, SASS/CSS3, HTML5, Scrum/Agile, GIT, WordPress, PHP, mySQL, Photoshop, Illustrator, Premiere and After Effects. </p>
+            <p>Specialties: ES6/Javascript, React, Redux, Babel, Webpack, Node, SASS/CSS3, HTML5, Scrum/Agile, GIT, WordPress, PHP, mySQL, Sketch, Photoshop, Illustrator, Premiere and After Effects. </p>
         </div>
     </div>
 
