--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ user-scalable=no">
   <div class="wrap header-wrap">
     <header class="section clearfix">
       <div class="logo">
-        <a href="#homeAnchor">Christian Halsell, yo</a>
+        <a href="#homeAnchor">Christian Halsell</a>
         <button id="mobileNavButton" class="mobile-nav-button">
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
