--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@ user-scalable=no"
       <div class="section about">
         <h2>About</h2>
         <p>
-          With twelve years professional experience in web and SPA development I
-          continue to find new ways to merge my love for technology and art.
+          With eighteen years professional experience in web and SPA development
+          I continue to find new ways to merge my love for technology and art.
         </p>
 
         <p>
