remove broken links

--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@ user-scalable=no"
                 <li>
                   <a href="#aboutAnchor">About</a>
                 </li>
-                <li>
+                <!-- <li>
                   <a href="#contactAnchor">Contact</a>
-                </li>
+                </li> -->
               </ul>
             </nav>
           </div>
@@ -126,27 +126,19 @@ user-scalable=no"
           </a>
         </div>
         <div>
-          <a href="http://www.cakepoplady.net/" target="_blank">
-            <img
-              src="images/port-sarndipity@2x.jpg"
-              alt="Sar.n.dipity Sweets"
-            />
-          </a>
+          <img src="images/port-sarndipity@2x.jpg" alt="Sar.n.dipity Sweets" />
         </div>
         <div>
-          <a href="http://www.shelleyandersoninteriors.com" target="_blank">
-            <img src="images/port-shelley@2x.jpg" alt="" />
-          </a>
+          <img
+            src="images/port-shelley@2x.jpg"
+            alt="Shelly Anderson Interiors"
+          />
         </div>
         <div>
-          <a href="http://www.rebelfortress.com" target="_blank">
-            <img src="images/port-rebel@2x.jpg" alt="" />
-          </a>
+          <img src="images/port-rebel@2x.jpg" alt="Rebel Fortress" />
         </div>
         <div>
-          <a href="http://www.bayviewcommunity.org" target="_blank">
-            <img src="images/port-bayview@2x.jpg" alt="" />
-          </a>
+          <img src="images/port-bayview@2x.jpg" alt="Bayview Communities" />
         </div>
         <div>
           <a href="http://www.conovernursingandrehab.com" target="_blank">
@@ -173,7 +165,7 @@ user-scalable=no"
       </div>
     </div>
 
-    <div class="wrap extra-wrap">
+    <!-- <div class="wrap extra-wrap">
       <div id="contactAnchor" class="contact-anchor"></div>
       <div class="section extra clearfix">
         <h2>Contact</h2>
@@ -252,14 +244,10 @@ user-scalable=no"
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <div class="wrap footer-wrap">
-      <footer>
-        &copy;
-        <?php echo date('Y'); ?>
-        Christian Halsell. All Rights Reserved
-      </footer>
+      <footer>&copy;2025 Christian Halsell. All Rights Reserved</footer>
     </div>
 
     <script src="js/custom.js"></script>
